--- a/.github/workflow/build.yaml
+++ b/.github/workflow/build.yaml
@@ -15,7 +15,7 @@ jobs:
   sponty:
     env:
       GO111MODULE: on
-      APP_NAME: sponty
+      IMAGE_NAME: sponty
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -25,5 +25,5 @@ jobs:
           # Going straight into running Docker build, since the build also includes running our
           # unit tests
 
-          docker build -t ${GITHUB_REPOSITORY}:${GITHUB_RUN_ID}_${GITHUB_RUN_ATTEMPT}
-          docker push ${GITHUB_REPOSITORY}:${GITHUB_RUN_ID}_${GITHUB_RUN_ATTEMPT}
+          docker build -t "${GITHUB_REPOSITORY}:${GITHUB_RUN_ID}_${GITHUB_RUN_ATTEMPT}"
+          docker push "${GITHUB_REPOSITORY}:${GITHUB_RUN_ID}_${GITHUB_RUN_ATTEMPT}"
