Adding release and test workflows for Sponty

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,10 +1,5 @@
 # Github doesn't support YAML anchoring yet: https://github.community/t/support-for-yaml-anchors/16128
 on:
-  push:
-    branches:
-    - main
-    - 'release/**'
-    - dev
   pull_request:
     branches:
     - main
@@ -13,17 +8,15 @@ on:
 
 jobs:
   sponty:
-    env:
-      GO111MODULE: on
-      APP_NAME: sponty
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Run Docker build
+      - name: Run unit tests
         run: |
           # Going straight into running Docker build, since the build also includes running our
           # unit tests
 
-          docker build -t ${GITHUB_REPO}:${GITHUB_RUN_ID}_${GITHUB_RUN_ATTEMPT}
-          docker push ${GITHUB_REPO}:${GITHUB_RUN_ID}_${GITHUB_RUN_ATTEMPT}
+          export IMAGE_NAME="${{ github.repository }}:${GITHUB_RUN_ID}_${GITHUB_RUN_ATTEMPT}"
+
+          docker build -t ${IMAGE_NAME} .
