--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,15 +6,15 @@ on:
     - 'release/**'
     - dev
 
-env:
-  SPONTY_GUILD_ID: ${{ secrets.SPONTY_GUILD_ID }}
-  SPONTY_BOT_TOKEN: ${{ secrets.SPONTY_BOT_TOKEN }}
-  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-
 jobs:
   deploy_sponty:
     name: Deploy sponty-bot
     runs-on: ubuntu-latest
+    environment: production
+    env:
+      SPONTY_GUILD_ID: ${{ secrets.SPONTY_GUILD_ID }}
+      SPONTY_BOT_TOKEN: ${{ secrets.SPONTY_BOT_TOKEN }}
+      FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
