--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,16 +7,8 @@ on:
     - dev
 
 jobs:
-  sponty:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Run unit tests
-        run: |
-          # Going straight into running Docker build, since the build also includes running our
-          # unit tests
-
-          export IMAGE_NAME="${{ github.repository }}:${GITHUB_RUN_ID}_${GITHUB_RUN_ATTEMPT}"
-
-          docker build -t ${IMAGE_NAME} .
+  test-sponty:
+    name: Test sponty-bot
+    uses: ./.github/workflows/reusable-test-go.yaml
+    with:
+      component: .
