--- a/.github/workflows/reusable-test-go.yaml
+++ b/.github/workflows/reusable-test-go.yaml
@@ -8,7 +8,9 @@ jobs:
   test-go:
     name: Test Golang app
     runs-on: ubuntu-latest
-    working-directory: app
+    defaults:
+      run:
+        working-directory: app
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
