--- a/.github/workflows/reusable-test-go.yaml
+++ b/.github/workflows/reusable-test-go.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: app
+        working-directory: .
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
